[gd_scene load_steps=3 format=2]

[ext_resource path="res://PitchRandomizerPlayer/PitchRandomizerPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://PSGGui/PSGGui.gd" type="Script" id=2]

[node name="PSGGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PitchRandomizerPlayer" parent="." instance=ExtResource( 1 )]
min_duration = 10.0
max_duration = 30.0
min_pitch_scale = 0.5
max_pitch_scale = 2.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 140 )
window_title = "Guardar un Archivo"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 14.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 924.0
margin_bottom = 32.0
text = "Pitch Shift Game"

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 924.0
margin_bottom = 50.0
text = "Load an audio file (ogg, mp3, or wav), play it, and click \"Click\" when it returns to the original pitch! (Ignore the overwrite warning)"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 924.0
margin_bottom = 68.0

[node name="LoadAudioFileButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 924.0
margin_bottom = 92.0
text = "Load audio file"

[node name="SongLabel" type="Label" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 924.0
margin_bottom = 110.0
text = "<no audio loaded>"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 924.0
margin_bottom = 128.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 924.0
margin_bottom = 146.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 924.0
margin_bottom = 170.0
text = "Play"

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 924.0
margin_bottom = 188.0

[node name="ClickButton" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 924.0
margin_bottom = 212.0
text = "Click"

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 924.0
margin_bottom = 230.0
align = 1

[node name="SettingsLabel" type="Label" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 924.0
margin_bottom = 248.0
text = "Settings"

[node name="MinDurationHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 252.0
margin_right = 924.0
margin_bottom = 268.0

[node name="Label" type="Label" parent="VBoxContainer/MinDurationHBoxContainer"]
margin_top = 1.0
margin_right = 238.0
margin_bottom = 15.0
text = "Min pitch shift duration (seconds): 10"

[node name="MinDurationHSlider" type="HSlider" parent="VBoxContainer/MinDurationHBoxContainer"]
margin_left = 242.0
margin_right = 924.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 360.0
step = 10.0
value = 10.0
__meta__ = {
"_editor_description_": "GO FROM GET MIN AND MAX DURATION SLIDERS WORKING IN SETTINGS"
}

[node name="MaxDurationHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 924.0
margin_bottom = 288.0

[node name="Label" type="Label" parent="VBoxContainer/MaxDurationHBoxContainer"]
margin_top = 1.0
margin_right = 240.0
margin_bottom = 15.0
text = "Max pitch shift duration (seconds): 30"

[node name="MaxDurationHSlider" type="HSlider" parent="VBoxContainer/MaxDurationHBoxContainer"]
margin_left = 244.0
margin_right = 924.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 360.0
step = 10.0
value = 30.0

[node name="MinPitchScaleHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 924.0
margin_bottom = 308.0

[node name="Label" type="Label" parent="VBoxContainer/MinPitchScaleHBoxContainer"]
margin_top = 1.0
margin_right = 125.0
margin_bottom = 15.0
text = "Min pitch scale: 0.5"

[node name="MinPitchScaleHSlider" type="HSlider" parent="VBoxContainer/MinPitchScaleHBoxContainer"]
margin_left = 129.0
margin_right = 924.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5

[node name="MaxPitchScaleHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 924.0
margin_bottom = 328.0

[node name="Label" type="Label" parent="VBoxContainer/MaxPitchScaleHBoxContainer"]
margin_top = 1.0
margin_right = 115.0
margin_bottom = 15.0
text = "Max pitch scale: 2"

[node name="MaxPitchScaleHSlider" type="HSlider" parent="VBoxContainer/MaxPitchScaleHBoxContainer"]
margin_left = 119.0
margin_right = 924.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 5.0
step = 0.5
value = 2.0

[node name="FlexibiityHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 924.0
margin_bottom = 348.0

[node name="Label" type="Label" parent="VBoxContainer/FlexibiityHBoxContainer"]
margin_top = 1.0
margin_right = 174.0
margin_bottom = 15.0
text = "Click flexibility (seconds): 5"

[node name="FlexibilityHSlider" type="HSlider" parent="VBoxContainer/FlexibiityHBoxContainer"]
margin_left = 178.0
margin_right = 924.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 30.0
value = 5.0

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0

[node name="Label" type="Label" parent="PopupDialog/VBoxContainer"]
margin_right = 584.0
margin_bottom = 14.0
text = "temp"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="PopupDialog/VBoxContainer"]
margin_top = 18.0
margin_right = 584.0
margin_bottom = 32.0

[node name="CloseButton" type="Button" parent="PopupDialog/VBoxContainer"]
margin_top = 36.0
margin_right = 584.0
margin_bottom = 56.0
text = "close"

[node name="RandomizeButton" type="Button" parent="PopupDialog/VBoxContainer"]
margin_top = 60.0
margin_right = 584.0
margin_bottom = 80.0
text = "randomize pitch and close"

[connection signal="finished" from="PitchRandomizerPlayer" to="." method="_on_PitchRandomizerPlayer_finished"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/LoadAudioFileButton" to="." method="_on_LoadAudioFileButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ClickButton" to="." method="_on_ClickButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/MinDurationHBoxContainer/MinDurationHSlider" to="." method="_on_MinDurationHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MaxDurationHBoxContainer/MaxDurationHSlider" to="." method="_on_MaxDurationHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MinPitchScaleHBoxContainer/MinPitchScaleHSlider" to="." method="_on_MinPitchScaleHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MaxPitchScaleHBoxContainer/MaxPitchScaleHSlider" to="." method="_on_MaxPitchScaleHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/FlexibiityHBoxContainer/FlexibilityHSlider" to="." method="_on_FlexibilityHSlider_value_changed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="PopupDialog/VBoxContainer/RandomizeButton" to="." method="_on_RandomizeButton_pressed"]
